@@ -88,6 +88,47 @@ CK2Barony::CK2Barony(Object* obj, CK2Title* newTitle, CK2Province* newProvince, 
 	determinePopProxy();
 	determineManpowerProxy();
 	determineTechBonus();
+
+	PSE = 0.0F;
+	vector<Object*> levyObjs = obj->getValue("levy")[0]->getLeaves();
+	for (unsigned int i = 0; i < levyObjs.size(); i++)
+	{
+		if (levyObjs[i]->getKey() == "light_infantry")
+		{
+			vector<string> tokens = levyObjs[i]->getTokens();
+			PSE += 0.50 * atoi(tokens[0].c_str());
+		}
+		else if (levyObjs[i]->getKey() == "archers")
+		{
+			vector<string> tokens = levyObjs[i]->getTokens();
+			PSE += 0.63 * atoi(tokens[0].c_str());
+		}
+		else if (levyObjs[i]->getKey() == "heavy_infantry")
+		{
+			vector<string> tokens = levyObjs[i]->getTokens();
+			PSE += 1.00 * atoi(tokens[0].c_str());
+		}
+		else if (levyObjs[i]->getKey() == "pikemen")
+		{
+			vector<string> tokens = levyObjs[i]->getTokens();
+			PSE += 1.64 * atoi(tokens[0].c_str());
+		}
+		else if (levyObjs[i]->getKey() == "light_cavalry")
+		{
+			vector<string> tokens = levyObjs[i]->getTokens();
+			PSE += 0.23 * atoi(tokens[0].c_str());
+		}
+		else if (levyObjs[i]->getKey() == "knights")
+		{
+			vector<string> tokens = levyObjs[i]->getTokens();
+			PSE += 1.00 * atoi(tokens[0].c_str());
+		}
+		else if (levyObjs[i]->getKey() == "horse_archers")
+		{
+			vector<string> tokens = levyObjs[i]->getTokens();
+			PSE += 0.42 * atoi(tokens[0].c_str());
+		}
+	}
 }
 
 
